@@ -1,0 +1,12 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<HTML>
+<HEAD>
+<TITLE>This service is temporary down</TITLE>
+</HEAD>
+<BODY bgcolor="#FFFFFF">
+<H1 align="center">Sorry, this service is temporary down</H1>
+We are doing our best to get it back on-line,
+
+<P>The W3C system administrators</P>
+</BODY>
+</HTML>
