@@ -1,0 +1,41 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<HTML>
+<HEAD>
+<TITLE>Linux Today</TITLE>
+</HEAD>
+<BODY bgcolor="White" link="Blue" text="Black" VLINK="Black" ALINK="Red">
+<CENTER>
+<TABLE BORDER="0" WIDTH="100%" CELLSPACING="0" CELLPADDING="0">
+<TR BGCOLOR="#FFFFFF">
+<TD HEIGHT="90">
+<A href="http://linuxtoday.com/cgi-bin/click.pl?adnum=49">
+<IMG src="/pics/door_linux.gif" border="0" width="468" height="60" alt="Atipa Linux solutions. Your reliable cluster, server, and workstation solution. Win a Free Celeron Linux Workstation!">
+</A>
+</TD>
+<TD>
+<IMG SRC="/pics/lt.gif" VSPACE="5" alt="Linux Today Logo">
+<BR>
+<FONT size="-1">
+<A href="http://linux.com">linux.com</A> partner</FONT>
+<P>
+</TD>
+</TR>
+</TABLE>
+<FONT size="2" face="Helvetica">
+[ <A href="http://linuxtoday.com/">headlines</A> |
+<A href="http://features.linuxtoday.com/">features</A> |
+<A href="http://commercial.linuxtoday.com/">commercial</A> |
+<A href="http://security.linuxtoday.com/">security</A> |
+<A href="http://jobs.linuxtoday.com/">jobs</A> |
+<A href="http://linuxtoday.com/volt/">volt</A> | 
+<A href="http://linuxtoday.com/contrib.pl">contribute/submit</A> |
+<A href="http://linuxtoday.com/advertise/">advertise</A> |
+<A href="http://linuxtoday.com/search.html">search</A> |
+<A href="http://linuxtoday.com/digests/">site digests</A> |
+<A href="http://linuxtoday.com/mail-lists">mailing lists</A> |
+<A href="http://linuxtoday.com/about/">about us</A> |
+<A href="http://linuxtoday.com/linkus.html">link us</A> ]</FONT>
+</CENTER>
+<P>
+</BODY>
+</HTML>
