@@ -1,0 +1,88 @@
+<!DOCTYPE HTML>
+<HTML>
+<HEAD>
+<BASE target="contents">
+</HEAD>
+<A name="ProblemDomain.Package">
+<H2>Component Package diagram ProblemDomain</H2>
+</A>
+<P>
+<HR>
+<DL>
+<DT>
+<B>Stereotype </B>problem domain</DT>
+<DT>
+<B>Alias </B>Problem Domain</DT>
+<DT>
+<B>Note </B>
+<DD>The Problem Domain package is the model behind the Human 
+<DD>Interface, thats stores and manipulates the Family Tree.
+</DD>
+</DD>
+</DT>
+</DL>
+<P>
+<HR>
+<DL>
+<DT>
+<H4>Class <A href="HumanInterface.FamilyFrame.html#HumanInterface.FamilyFrame">HumanInterface.FamilyFrame</A>
+</H4>
+</DT>
+<DT>
+<H4>Class <A href="ProblemDomain.Birth.html#ProblemDomain.Birth">ProblemDomain.Birth</A>
+</H4>
+</DT>
+<DT>
+<H4>Class <A href="ProblemDomain.Death.html#ProblemDomain.Death">ProblemDomain.Death</A>
+</H4>
+</DT>
+<DT>
+<H4>Class <A href="ProblemDomain.Divorce.html#ProblemDomain.Divorce">ProblemDomain.Divorce</A>
+</H4>
+</DT>
+<DT>
+<H4>Class <A href="ProblemDomain.Family.html#ProblemDomain.Family">ProblemDomain.Family</A>
+</H4>
+</DT>
+<DT>
+<H4>Class <A href="ProblemDomain.Individual.html#ProblemDomain.Individual">ProblemDomain.Individual</A>
+</H4>
+</DT>
+<DT>
+<H4>Class <A href="ProblemDomain.LifeEvent.html#ProblemDomain.LifeEvent">ProblemDomain.LifeEvent</A>
+</H4>
+</DT>
+<DT>
+<H4>Class <A href="ProblemDomain.Marriage.html#ProblemDomain.Marriage">ProblemDomain.Marriage</A>
+</H4>
+</DT>
+<DT>
+<H4>Class <A href="ProblemDomain.Note.html#ProblemDomain.Note">ProblemDomain.Note</A>
+</H4>
+</DT>
+</DL>
+<H4>
+<B>Links</B>
+</H4>
+<UL>
+<LI>
+<B>Link to </B>
+<A href="HumanInterface.Package.html#HumanInterface.Package">HumanInterface</A>
+</LI>
+</UL>
+<DIR></DIR>
+<UL>
+<LI>
+<B>Link to </B>
+<A href="DataManagement.FlatFile.Package.html#DataManagement.FlatFile.Package">DataManagement.FlatFile</A>
+</LI>
+</UL>
+<DIR></DIR>
+<UL>
+<LI>
+<B>Link to </B>
+<A href="DataManagement.Package.html#DataManagement.Package">DataManagement</A>
+</LI>
+</UL>
+<DIR></DIR>
+</HTML>
